--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "concurrently": "^6.2.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -16,6 +17,8 @@
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
+    "mybatis-mapper": "^0.6.5",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.7"
   }
 }
